fix horizontal scroll 2

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -26,6 +26,7 @@ a {
 body {
     width: auto;
     margin: 0;
+    overflow-x:hidden;
 }
 
 .sans-footer {
