--- a/css/mobile.css
+++ b/css/mobile.css
@@ -112,7 +112,7 @@
 
     .Hébergements-à-Marseille {
         background-color: white;
-        width: 100%;
+        flex:1;
         margin-left: 10px;
     }
 
@@ -243,6 +243,7 @@
 }
 
 @media screen and (max-width: 768px) {
+
     .menu-1 {
         display: flex;
         flex-direction: column;
@@ -323,6 +324,7 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        align-items: center;
     }
 
     .Activités-à-Marseille {
@@ -355,7 +357,7 @@
 
     .Hébergements-à-Marseille {
         background-color: white;
-        width: 100%;
+        flex:1;
         margin-left: 10px;
     }
 
